terraform_ec2/ec2_security_group.tf
resource "aws_security_group" "ec2_public" {
  name   = "${local.resource_prefix}_ec2"
  vpc_id = data.terraform_remote_state.vpc.outputs.vpc_id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.myip.body)}/32"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.myip.body)}/32"]
  }
//  ingress {
//    from_port   = 25565
//    to_port     = 25565
//    protocol    = "tcp"
//    cidr_blocks = ["0.0.0.0/0"]
//  }
  ingress {
    from_port   = 25565
    to_port     = 25565
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.myip.body)}/32"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = merge(
    local.base_tags,
    {
      Name = "${local.resource_prefix}_ec2"
    },
  )
}

resource "aws_security_group" "ec2_private" {
  name = "${local.resource_prefix}_ec2_private"
  vpc_id = data.terraform_remote_state.vpc.outputs.vpc_id
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [
      "${chomp(data.http.myip.body)}/32"]
  }
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = [
      "${chomp(data.http.myip.body)}/32"]
  }
}
